--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,33 @@
   }
 
   button {
-    @apply text-text-button font-medium p-4;
+    @apply text-text-button font-medium;
+  }
+}
+
+@layer utilities {
+  .hover-shadow {
+    transition: box-shadow 200ms ease-in-out;
+    box-shadow: inset 0 0 0px 0px rgb(0 0 0 / 30%);
+  }
+  .hover-shadow:hover {
+    box-shadow: inset 0 0 0px 2px rgb(0 0 0 / 30%);
+  }
+
+  .hover-shadow:focus-within {
+    box-shadow: inset 0 0 0px 2px rgb(0 0 0 / 30%), 0 0 0px 3px rgb(0 0 0 / 18%);
+  }
+
+  .spinner-animation {
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
